2007-03-23  John W. Eaton  <jwe@octave.org>

	* plot/__pltopt1__.m: Handle "@" marker same as "+".
	Handle numeric color specs.
	* plot/plot.m: Remove "-@" and "@" from docstring.

	* plot/orient.m: Fix tests to avoid creating a plot window.

	* elfun/acosd.m, elfun/acotd.m, elfun/acscd.m, elfun/asecd.m,
	elfun/asind.m, elfun/atand.m, elfun/cosd.m, elfun/cotd.m,
	elfun/cscd.m, elfun/secd.m, elfun/sind.m, elfun/tand.m,
	general/arrayfun.m, miscellaneous/compare_versions.m,
	path/savepath.m, pkg/pkg.m, plot/__gnuplot_version__.m,
	plot/contour.m, plot/contourc.m, plot/legend.m, plot/stem.m,
	polynomial/pchip.m: Fix copyright notice, correct FSF address.

	* plot/__go_draw_figure__.m: Send reset to gnuplot before every
	plot, not just multiplots.

	* plot/__go_draw_axes__.m: Use %g for label coordinates, not %d.

	* plot/contour.m: Don't call drawnow.

2007-03-22  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m: Check and optionally, set, the __modified__
	property of each figure.

	* plot/__go_draw_axes__.m: If no real data, plot a point at Inf,
	Inf to show axes.  From Daniel J Sebald <daniel.sebald@ieee.org>.

2007-03-21  John W. Eaton  <jwe@octave.org>

	* linear-algebra/null.m: Set elements of retval with magnitudes
	less than eps to 0.

2007-03-21  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Handle some colors with older gnuplot.
	* testfun/speed.m: Documentation and example fix.
	
2007-03-21  John W. Eaton  <jwe@octave.org>

	* plot/subplot.m: If we find an existing subplot region, set
	it to be the "currentaxes" property for the current figure.
	Delete old axes objects if the new axes object overlaps the old.

2007-03-20  David Bateman  <dbateman@free.fr>

	* general/Makefile.in: Include arrayfun.m in SOURCES.

2007-03-20  Bill Denney  <denney@seas.upenn.edu>

	* general/arrayfun.m: New function.

2007-03-20  John W. Eaton  <jwe@octave.org>

	* plot/newplot.m: Call __request_drawnow__ after initializing axes.