@@ -1,5 +1,7 @@
 2007-03-23  John W. Eaton  <jwe@octave.org>
 
+	* sparse/spy.m: Update plotting code.
+
 	* plot/__pltopt1__.m: Handle "@" marker same as "+".
 	Handle numeric color specs.
 	* plot/plot.m: Remove "-@" and "@" from docstring.
